# bdd-poc-nate

./: .gitignore  README.md  app.py  behave.ini  file.py  pyproject.toml
features/: checkout.feature  config.py  environment.py  smart_proxy.py
features/steps/: add_to_cart.py  buy_now.py  card_details.py  confirm_and_pay.py  continue_to_payment_flow.py  keywords.py  login_flow.py  payment_flow.py  personal_info.py  proceed_to_checkout.py  proceed_to_checkout_step1.py  proceed_to_checkout_step2.py  review_order.py  shipping_address.py
modules/: add_to_cart.py  base.py  buy_now.py  card_details.py  confirm_and_pay.py  constants.py  continue_to_payment.py  continuetopayment.py  cookies_pop_up.py  keywords.py  login.py  payment.py  personal_info.py  proceed_to_checkout.py  proceed_to_checkout_step1.py  proceed_to_checkout_step2.py  promotion_pop_up.py  review_order.py  ship.py  shipping_info.py  utilities.py
utility/: constants.py  ship_utils.py  user_personal_info.py  utilities.py
