[tool.poetry]
name = "naik-poc"
version = "0.1.0"
description = "Backend Automation Service"
authors = ["Nabeel Shakeel <nabeel.shakeel@techwards.co>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
behave = "^1.2.6"
webdriver-manager = "^3.4.2"
pywin32 = "^301"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
